# flingern

./: README.md  flake.nix  pyproject.toml
flingern/: images.py  page.py  sections.py  website.py  websitedata.py
flingern/markdown/: gallery.py
flingern/theme/partials/: content_gallery.pt  head.pt  menu.pt  scripts.pt
flingern/theme/public/: gallery.js  highlight.css  style.css
site/: site.yaml
site/content/: index.md
site/content/docs/: galleries.md  gettingstarted.md
