[project]
name = "flingern"
version = "0.1.0"
description = "a simple static art website generator"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Bruno Croci", email = "crocidb@gmail.com" },
]

dependencies = [
  "Chameleon==4.5.4",
  "Pillow==11.0.0",
  "PyYAML==6.0.2",
  "glob2==0.7",
  "markdown==3.7",
  "Pygments==2.18.0",
  "watchdog==6.0.0",
  "importlib-metadata==8.5.0"
]

[project.scripts]
flingern = "flingern.main:main"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flingern*"]

[tool.black]
line-length = 120
